# ethereum_gateway

./: .babelrc  .dockerignore  .gitignore  .sequelizerc  .travis.yml  CLA-Entity.md  CLA-Individual.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ROADMAP.md  docker-compose.yaml  package-lock.json  package.json  rustfmt.toml  tsconfig.json
lib/: app.js  bitshares.js  index.js  utils.js
lib/config/: config.app.js  config.db.js
lib/jobs/: ethereum_to_bitshares.js  index.js
lib/middlewares/: index.js
lib/migrations/: 20191130072647-create-wallets-derived-wallets-and-transactions.js
lib/models/: derived-wallets.js  index.js  transactions.js  wallets.js
lib/views/: transactions.js
lib/web3/: ethereum_usdt_contract.js  index.js
src/: app.ts  bitshares.ts  bitsharesjs-ws.d.ts  index.ts  jobs.ts  main.rs  models.ts  queue.ts  rpc.ts  utils.ts  views.ts  web3.ts  worker.ts
src/config/: config.app.ts  config.db.ts
src/migrations/: 20191130072647-create-wallets-derived-wallets-and-transactions.ts
