[package]
name = "payment-gateway"
version = "0.1.0"
authors = ["Sergey Sherkunov <leinlawun@leinlawun.org>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
pretty_env_logger = "~0.3.1"
futures-preview = "~0.3.0-alpha.19"
tokio = "~0.2.0-alpha.6"
tokio-postgres = "~0.5.0-alpha.1"
hyper = { version = "~0.13.0-alpha.4", features = ["unstable-stream"] }
reqwest = "~0.10.0-alpha.1"

[profile.release]
lto = true
panic = "abort"
